# cppmie

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  main.cpp
.github/workflows/: cmake.yml
benchmark/: bench_mie_reference.cc
docs/: Doxyfile  bibliography.bib
include/cppmie/: cppmie.h
test/: test_mie_reference.cc
